# quiz_generator

./: .env.example  README.md  index.html  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  setup.sh  tailwind.config.js
app/: config.py  database.py  file_parser.py  gemini_client.py  groq_client.py  huggingface_client.py  llm_client.py  models.py  quiz_generator.py
app/routers/: __init__.py  quiz.py  upload.py
public/: index.html  quiz-viewer.html
src/: App.tsx  index.css
src/components/: FileUpload.tsx  LoadingSpinner.tsx  QuizDisplay.tsx  QuizEditor.tsx
src/hooks/: useQuiz.ts
src/services/: api.ts
src/types/: index.ts
tests/: test_file_parser.py  test_quiz_generation.py
